--- a/index.html
+++ b/index.html
@@ -4,8 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whatsapp Two</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+<div class="container-main">
+    <div class="area-esquerda">
+        <header>
+            <div class="areafoto">
+                <div class="div-foto">
+                    <img class="foto-profile" src="img/foto-de-perfil.jpeg" alt="foto-de-perfil">
+                </div>
+            </div>
+            <div class="icons-area">
+                <span>
+                    <div class="icons">
+                        <div class="icon1">
+                            <span></span>
+                        </div>
+                    </div>
+                    <div class="icons">
+                        <div class="icon2">
+                            <span></span>
+                        </div>
+                    </div>
+                    <div class="icons">
+                        <div class="icon3">
+                            <span></span>
+                        </div>
+                    </div>
+                    <div class="icons">
+                        <div class="icon4">
+                            <span></span>
+                        </div>
+                    </div>
+                    <div class="icons">
+                        <div class="icon5">
+                            <span></span>
+                        </div>
+                    </div>
+                </span>
+            </div>
+        </header>
+        <div class="lista-de-conversas">
+            <div class="barra-pesquisa">
+                <div class="pesquisar">
+                    <button>
+                        <div class="icone-pesquisa">
+                            <span></span>
+                        </div>
+                    </button>
+                    <div class="texto-da-barra">
+                    </div>
+                    <button>
+                        <div class="conversas-n-lidas">
+                            <span></span>
+                        </div>
+                    </button>
+                </div>
+            </div>
+            <div class="area-conversa">
+                <button>
+                    <div class="icon-arquive">
+                        <span></span>
+                    </div>
+                    <div class="text-area-arquive">
+                    </div>
+                </button>
+                <div class="lista-de-conversas">
+                </div>
+            </div>
+        </div>
+        </div>
+    <div class="box-direita">
+        <div class="interacao-area">
+            <div class="foto-area">
+            </div>
+            <div class="download-area">
+                <button>
+                    <div></div>
+                </button>
+            </div>
+            <div class="roda-pe">
+                <span></span>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
