novas imagens, inicio da construção

--- a/index.html
+++ b/index.html
@@ -3,90 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whatsapp Two</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Whatsapp 2</title>
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-<div class="container-main">
-    <div class="area-esquerda">
-        <header>
-            <div class="areafoto">
-                <div class="div-foto">
-                    <img class="foto-profile" src="img/foto-de-perfil.jpeg" alt="foto-de-perfil">
+<div class="container-body">
+    <div class="container-main">
+        <div class="area-esquerda">
+            <header>
+                <div class="areafoto">
+                    <div class="div-foto">
+                        <img class="foto-profile" src="img/foto-de-perfil.jpeg" alt="foto-de-perfil">
+                    </div>
                 </div>
-            </div>
-            <div class="icons-area">
-                <span>
-                    <div class="icons">
-                        <div class="icon1">
-                            <span></span>
+                <div class="icons-container">
+                    <span class="icons-area">
+                        <div class="icons">
+                            <div class="icon-comunidade">
+                                <i class="gg-user-list"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="icons">
-                        <div class="icon2">
-                            <span></span>
+                        <div class="icons">
+                            <div class="icon-status">
+                                <i class="gg-camera"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="icons">
-                        <div class="icon3">
-                            <span></span>
+                        <div class="icons">
+                            <div class="icon-canais">
+                                <i class="gg-media-podcast"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="icons">
-                        <div class="icon4">
-                            <span></span>
+                        <div class="icons">
+                            <div class="icon-conversa">
+                                <i class="gg-comment"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="icons">
-                        <div class="icon5">
-                            <span></span>
+                        <div class="icons">
+                            <div class="icon-menu">
+                                <i class="gg-menu"></i>
+                            </div>
                         </div>
+                    </span>
+                </div>
+            </header>
+            <div class="lista-de-conversas">
+                <div class="barra-pesquisa">
+                    <div class="pesquisar">
+                        <button>
+                            <div class="icone-pesquisa">
+                                <span></span>
+                            </div>
+                        </button>
+                        <div class="texto-da-barra">
+                        </div>
+                        <button>
+                            <div class="conversas-n-lidas">
+                                <span></span>
+                            </div>
+                        </button>
                     </div>
-                </span>
-            </div>
-        </header>
-        <div class="lista-de-conversas">
-            <div class="barra-pesquisa">
-                <div class="pesquisar">
+                </div>
+                <div class="area-conversa">
                     <button>
-                        <div class="icone-pesquisa">
+                        <div class="icon-arquive">
                             <span></span>
+                        </div>
+                        <div class="text-area-arquive">
                         </div>
                     </button>
-                    <div class="texto-da-barra">
+                    <div class="lista-de-conversas">
                     </div>
-                    <button>
-                        <div class="conversas-n-lidas">
-                            <span></span>
+                </div>
+            </div>
+            </div>
+        <div class="area-direita">
+            <div class="interacao-area">
+                <div class="div-box">
+                    <div class="foto-area">
+                        <div class="foto-whatsapp">
+                            <img class="foto-zap" src="img/whatsapp-dois.jpg" alt="foto-zap-dois">
                         </div>
-                    </button>
-                </div>
-            </div>
-            <div class="area-conversa">
-                <button>
-                    <div class="icon-arquive">
-                        <span></span>
                     </div>
-                    <div class="text-area-arquive">
+                    <div class="text-box">
+                        <h1>Faltam apenas doze dias para o lançamento</h1>
+                        <div class="paragrafo">
+                            O lançamento mais aguardado da decada esta chegando, o Whatsapp 2. Esta é apenas uma demonstração do produto final, aproveite e descubra a nova versão.
+                        </div>
                     </div>
-                </button>
-                <div class="lista-de-conversas">
+                    <div class="roda-pe">
+                    </div>
                 </div>
-            </div>
-        </div>
-        </div>
-    <div class="box-direita">
-        <div class="interacao-area">
-            <div class="foto-area">
-            </div>
-            <div class="download-area">
-                <button>
-                    <div></div>
-                </button>
-            </div>
-            <div class="roda-pe">
-                <span></span>
-            </div>
+                </div>
         </div>
     </div>
 </div>
