adicionado novas features

--- a/index.html
+++ b/index.html
@@ -87,10 +87,19 @@
                     <div class="text-box">
                         <h1>Faltam apenas doze dias para o lançamento</h1>
                         <div class="paragrafo">
-                            O lançamento mais aguardado da decada esta chegando, o Whatsapp 2. Esta é apenas uma demonstração do produto final, aproveite e descubra a nova versão.
+                            O lançamento mais aguardado da decada esta chegando, o Whatsapp 2. Esta é apenas uma demonstração do produto final, após os doze dias, download disponivel no botão abaixo.
                         </div>
+                        <div class="div-botao">
+                            <button id="botao-download" type="button">Baixar Whatsapp 2</button>
+                        </div>     
                     </div>
-                    <div class="roda-pe">
+                    <div class="rodape-cointainer">
+                        <div class="roda-pe">
+                            <div class="icon-rodape">
+                                <i class="gg-lock"></i>
+                            </div>
+                            Suas mensagens pessoais são protegidas com a criptografia de ponta a ponta.
+                        </div>
                     </div>
                 </div>
                 </div>
