adicionado novas features

--- a/index.html
+++ b/index.html
@@ -49,28 +49,27 @@
             <div class="lista-de-conversas">
                 <div class="barra-pesquisa">
                     <div class="pesquisar">
-                        <button>
+                        <div class="icone-pesquisa-area">
                             <div class="icone-pesquisa">
-                                <span></span>
+                                <i class="gg-search"></i>
                             </div>
-                        </button>
-                        <div class="texto-da-barra">
                         </div>
-                        <button>
-                            <div class="conversas-n-lidas">
-                                <span></span>
+                        <div class="texto-da-barra">
+                            <div class="texto-pesquisa">
+                                <input type="text" placeholder="Pesquisar ou começar uma nova conversa" class="input-pesquisa">
                             </div>
-                        </button>
+                        </div>
+                    </div>
+                    <div class="conversas-n-lidas">
+                        <div class="icone-naolido">
+                        </div>
                     </div>
                 </div>
                 <div class="area-conversa">
-                    <button>
-                        <div class="icon-arquive">
-                            <span></span>
+                        <div class="icon-arquive">    
                         </div>
                         <div class="text-area-arquive">
                         </div>
-                    </button>
                     <div class="lista-de-conversas">
                     </div>
                 </div>
