alteração em styles e textos

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="text-box">
                         <h1>Faltam apenas doze dias para o lançamento</h1>
                         <div class="paragrafo">
-                            O lançamento mais aguardado da decada esta chegando, o Whatsapp 2. Esta é apenas uma demonstração do produto final, após os doze dias, download disponivel no botão abaixo.
+                            O lançamento mais aguardado da decada esta chegando, o Whatsapp 2. Esta é apenas uma demonstração do produto na versão web, após os doze dias, download disponivel no botão abaixo.
                         </div>
                         <div class="div-botao">
                             <button id="botao-download" type="button">Baixar Whatsapp 2</button>
